# love-live-songs-emotion-classifier

./: .dockerignore  .gitattributes  Dockerfile  README.md  pyproject.toml
love_live_songs_sentiment_classfier/: LL_songs_sentiment_classfier.pkl  love_live_songs.csv  main.py
