[tool.poetry]
name = "love-live-songs-sentiment-classfier"
version = "0.1.0"
description = ""
authors = ["Felipe Ribeiro <feliper.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
